# multi-game-boy

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  example.env  export.fish  export.sh  gen_includes.py  platformio.ini  run.sh  sdkconfig.defaults  sdkconfig.defaults.debug  sdkconfig.defaults.linux  todo.md
components/engine/: Kconfig
components/engine/include/: input.h  rasterizer.h  vec.h
components/engine/src/: engine.c  input.c  rasterizer.c  vec.c
components/engine/test/: CMakeLists.txt  engine_test_utils.h  test_rasterizer.c  test_vec.c
components/simple_wifi/: CMakeLists.txt
components/simple_wifi/include/: simple_wifi.h
components/simple_wifi/src/: simple_wifi.c
docs/: design_doc.typ
main/: CMakeLists.txt  Kconfig  config.h  main.c  multigameboy.c  utils.h
main/include/: config.h  display.h  display_test.h  utils.h
main/src/: display.c  display_test.c  main.c
scripts/: export.fish  export.sh  lsp.fish  lsp.sh  reset_target_linux.fish  reset_target_linux.sh  set_target_linux.fish  set_target_linux.sh
src/: aabb.hpp  button.hpp  component_pool.hpp  gfx.hpp  lowres_gfx.hpp  main.cpp  main_lowres.cpp  palette_gfx.hpp  utils.hpp
src/game/: aabb.hpp
test/: CMakeLists.txt
test/main/: CMakeLists.txt  unit_test.c
